Ajuste em serviços do tipo Compra